Intermittent PID 9884 | Assertion failure: gInstance, at z:/build/build/src/media/webrtc/signaling/src/peerconnection/PeerConnectionCtx.cpp:159
Categories
(Core :: WebRTC: Signaling, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox65 | --- | unaffected |
| firefox66 | + | fixed |
| firefox67 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: bwc)
Details
(Keywords: assertion, intermittent-failure, regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta-
lizzard
:
approval-mozilla-release+
|
Details | Review |
#[markdown(off)]
Filed by: aciure [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=232351795&repo=autoland
05:42:15 INFO - PID 9884 | [Parent 2800, Main Thread] WARNING: NS_ENSURE_TRUE(aCsp) failed: file z:/build/build/src/dom/base/nsOpenURIInFrameParams.cpp, line 84
05:42:15 INFO - PID 9884 | [Child 9512: Socket Thread]: I/mtransport Flow[transport_0(none)]; Layer[dtls]: Handshake would have blocked
05:42:15 INFO - PID 9884 | [Child 9512: Socket Thread]: I/mtransport Flow[transport_0(none)]; Layer[dtls]: Handshake would have blocked
05:42:15 INFO - PID 9884 | ++DOCSHELL 000001994A84C000 == 1 [pid = 7676] [id = {7fc0ae4b-9bf2-4912-b1a8-5bef9767ffec}]
05:42:15 INFO - PID 9884 | [Child 9512: Socket Thread]: I/mtransport Flow[transport_0(none)]; Layer[dtls]: ****** SSL handshake completed ******
05:42:15 INFO - PID 9884 | [Child 9512: Socket Thread]: I/mtransport Flow[transport_0(none)]; Layer[dtls]: Selected ALPN string: webrtc
05:42:15 INFO - PID 9884 | ++DOMWINDOW == 1 (00000199505EB020) [pid = 7676] [serial = 1] [outer = 0000000000000000]
05:42:15 INFO - PID 9884 | [Child 9512: Socket Thread]: D/mtransport Created SRTP flow!
05:42:15 INFO - PID 9884 | Assertion failure: gInstance, at z:/build/build/src/media/webrtc/signaling/src/peerconnection/PeerConnectionCtx.cpp:159
05:42:15 INFO - PID 9884 | (ice/INFO) ICE-PEER(PC:1551937335608000 (id=17179869188 url=https://web-platform.test:8443/webrtc/RTCDTMFSender-insertDTMF.https.html):default): no FROZEN/WAITING pairs for PC:1551937335608000 (id=17179869188 url=https://web-platform.test:8443/webrtc/RTCDTMFSender-insertDTMF.https.html) transport-id=transport_0 - eec2c962:41abe7b18433abd1d94234bb2e036581
05:42:15 INFO - PID 9884 | [Parent 2800, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
05:42:15 INFO - PID 9884 | ++DOMWINDOW == 2 (0000019950566000) [pid = 7676] [serial = 2] [outer = 00000199505EB020]
05:42:35 INFO - PID 9884 | #01: nsresult mozilla::runnable_args_func<void (*)(const std::basic_string<char,std::char_traits<char>,std::allocator<char> > &, const std::basic_string<char,std::char_traits<char>,std::allocator<char> > &),std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::basic_string<char,std::char_traits<char>,std::allocator<char> > >::Run() [media/mtransport/runnable_utils.h:95]
05:42:35 INFO -
05:42:35 INFO - PID 9884 | #02: nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:1166]
05:42:35 INFO -
05:42:35 INFO - PID 9884 | #03: nsThread::Shutdown() [xpcom/threads/nsThread.cpp:880]
05:42:35 INFO -
05:42:35 INFO - PID 9884 | #04: nsresult mozilla::detail::RunnableFunction<`lambda at z:/build/build/src/dom/workers/remoteworkers/RemoteWorkerService.cpp:144:54'>::Run() [xpcom/threads/nsThreadUtils.h:562]
05:42:35 INFO -
05:42:35 INFO - PID 9884 | #05: mozilla::SchedulerGroup::Runnable::Run() [xpcom/threads/SchedulerGroup.cpp:295]
05:42:35 INFO -
05:42:35 INFO - PID 9884 | #06: nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:1166]
05:42:35 INFO -
05:42:35 INFO - PID 9884 | #07: nsThread::Shutdown() [xpcom/threads/nsThread.cpp:880]
05:42:35 INFO -
05:42:35 INFO - PID 9884 | #08: nsThreadPool::Shutdown() [xpcom/threads/nsThreadPool.cpp:349]
05:42:35 INFO -
05:42:35 INFO - PID 9884 | #09: nsresult mozilla::detail::RunnableMethodImpl<nsCOMPtr<nsIThreadPool>,nsresult (nsIThreadPool::*)(),1,mozilla::RunnableKind::Standard>::Run() [xpcom/threads/nsThreadUtils.h:1177]
| Assignee | ||
Comment 1•6 years ago
|
||
Looking at the stack, it seems that we must be running a Runnable created by WrapRunnableNM, that takes two std::string params. I see only one such call:
This does end up calling PeerConnectionCtx::GetInstance, via the PeerConnectionWrapper c'tor. It seems reasonable that PeerConnectionWrapper should check PeerConnectionCtx::IsActive before calling GetInstance.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
| Assignee | ||
Comment 3•6 years ago
|
||
Comment 5•6 years ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 7•6 years ago
|
||
Comment on attachment 9049229 [details]
Bug 1533261: Check whether PeerConnectionCtx is active before calling GetInstance. r?mjf
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: None
- User impact if declined: Relatively uncommon intermittent failures in mozilla-beta wpt. Maybe caused by wpt changes from upstream, but hard to tell.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very low risk, just adds a check that avoids null-pointer use.
- String changes made/needed: None
Comment 8•6 years ago
|
||
Comment on attachment 9049229 [details]
Bug 1533261: Check whether PeerConnectionCtx is active before calling GetInstance. r?mjf
Adds a null check, OK for uplift for the 66 RC.
Updated•6 years ago
|
Comment 9•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Description
•