Bug 1533261: Check whether PeerConnectionCtx is active before calling GetInstance. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D22530